<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:tabBackground="@drawable/tab_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_image"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xxlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:background="@color/green"
                android:padding="@dimen/padding_small"
                android:text="@string/in_stock"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"

                />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_name"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge" />

            <TextView
                android:id="@+id/tv_product_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_name"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_xmedium"
                android:layout_toRightOf="@id/tv_product_price"
                android:text="@string/inclues_of_taxes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xsmall" />

            <TextView
                android:id="@+id/tv_product_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_price"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/rs_amount_strick"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_product_rupees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_product_price"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_toRightOf="@id/tv_product_discount"
                android:text="@string/you_save"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_xmedium"
                android:textStyle="bold" />

            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@id/tv_product_rupees"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/background_orange"
                android:drawableRight="@drawable/ic_add_24"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_all_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_product_info"
            android:background="@color/dark_grey">


            <RelativeLayout
                android:id="@+id/rl_decription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_description_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description_name"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/description_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/see_more"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_medium" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_decription"
                android:layout_margin="@dimen/margin_large"
                android:background="@color/white"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/tv_offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/offers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_offer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_offer"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/offer1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_offer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_offer1"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/offer1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_offers"
                android:layout_margin="@dimen/margin_large"
                android:background="@color/white"
                android:padding="@dimen/padding_small">

                <TextView
                    android:id="@+id/tv_products_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/product_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xlarge"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_products_info">

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_product1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            android:text="@string/brand"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:id="@+id/tv_item1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_offer"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            android:text="@string/item1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll1">


                        <TextView
                            android:id="@+id/tv_product2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            android:text="@string/manufactur"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:id="@+id/tv_item2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_offer"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            android:text="@string/item1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll2">


                        <TextView
                            android:id="@+id/tv_product3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            android:text="@string/ingradient"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_large" />

                        <ImageView
                            android:id="@+id/tv_item3"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1"
                            />

                    </LinearLayout>


                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_bought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_all_info"
            android:background="@color/silent_blue"
            android:padding="@dimen/padding_small"
            >

            <TextView
                android:id="@+id/tv_bought"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/bought_together"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/see_all"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/margin_medium"
                android:textSize="@dimen/text_medium"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_bought"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_what"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/what_customer_says"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_alll"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_medium"

                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_medium"
                />

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>