<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="200dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    card_view:cardCornerRadius="10dp"
    card_view:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/rl_offer_percent"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/offer_shape"
            >

            <TextView
                android:id="@+id/tv_offer_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:gravity="center_horizontal"
                android:text="@string/offer_percent"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xlarge"
                />
        </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_offer_percent"
        >

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:src="@drawable/shopping"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_new"
                android:textSize="@dimen/text_large"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_rupee_icon"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_medium"

                />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_discount"
                android:layout_below="@id/tv_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                android:drawableLeft="@drawable/ic_rupee_icon_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:text="@string/product_name"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_product_name"
        android:layout_centerHorizontal="true"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_xsmall"
        />

    </RelativeLayout>



</androidx.cardview.widget.CardView>